--- a/src/style.css
+++ b/src/style.css
@@ -5,8 +5,43 @@
   padding: 0;
 }
 
-#game_place {
+
+#user_place {
   width: 500px;
   padding: 10px;
-  border: 2px solid #5042f4;
+  border: 6px solid #5042f4;
+  margin: 0 auto;
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+}
+
+.cell {
+  width: 30px;
+  height: 30px;
+  background-color: aquamarine;
+  margin: 5px;
+}
+
+#block1 {
+  background-color: green;
+  width: 50px;
+  height: 50px;
+}
+
+.section-ship {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  background-color: chocolate;
+}
+
+#ships {
+  width: 500px;
+}
+
+#ships > div {
+  display: inline-block;
+  margin: 20px;
+  padding: 0;
 }
